--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve --host localhost",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db.json",
+    "test": "vue-cli-service test:unit",
     "test:coverage": "vue-cli-service test:unit --coverage",
-    "test:watch": "vue-cli-service test:unit --watch",
-    "backend": "json-server --watch db.json"
+    "test:watch": "vue-cli-service test:unit --watch"
   },
   "dependencies": {
     "autoprefixer": "^10",
@@ -18,7 +18,8 @@
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -30,6 +31,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
